# juice_bot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  fly.toml  pyproject.toml
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_ingredients.py  0003_add_batches.py  0004_add_customer_purchases.py  0005_add_tomorrow_orders.py  0006_add_product_name_to_events.py
product-development/: product.md
specs/001-expense-tracker-bot/: spec.md
specs/001-expense-tracker-bot/checklists/: requirements.md
specs/002-compote-sales-tracker/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-compote-sales-tracker/checklists/: requirements.md
specs/002-compote-sales-tracker/contracts/: bot_commands.md
src/: bot.py
src/handlers/: commands.py  customer.py  keyboards.py  messages.py
src/models/: base.py  batch.py  batch_usage.py  customer_purchase.py  event.py  ingredient.py  ingredient_purchase.py  settings.py  tomorrow_order.py
src/services/: analytics.py  cost_calculator.py  market_price.py  parser.py  scheduler.py  schemas.py  sheets.py  stock.py  unit_converter.py
tests/integration/: test_analytics.py  test_parser.py
tests/unit/: test_calculations.py
