[tool.poetry]
name = "juice-bot"
version = "0.1.0"
description = "Telegram bot for compote sales tracking"
authors = ["Elturan"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = {version = "22.5", extras = ["job-queue"]}
groq = ">=0.13"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
alembic = "^1.13"
pydantic = "^2.0"
gspread = "^6.0"
pytz = "^2024.1"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
black = "^24.0"
isort = "^5.13"
ruff = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
